--- a/helm/node-exporter-app/templates/service.yaml
+++ b/helm/node-exporter-app/templates/service.yaml
@@ -1,18 +1,23 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Values.name }}
-  namespace: {{ .Values.namespace }}
+  name: {{ include "resource.default.name" }}
+  namespace: {{ include "resource.default.namespace" }}
   labels:
-    app: {{ .Values.name }}
+    {{- include "labels.common" . | nindent 4 }}
     giantswarm.io/service-type: "managed"
   annotations:
-    prometheus.io/scrape: "true"
+    prometheus.io/port: "{{ .Values.port  }}"
     prometheus.io/scheme: "http"
+    prometheus.io/scrape: "true"
+    # TODO: decide if this is needed
+    # giantswarm.io/monitoring-path: "metrics"
+    # giantswarm.io/monitoring-port: "{{ .Values.port  }}"
+    # giantswarm.io/monitoring: "true"
 spec:
   ports:
   - port: {{ .Values.port }}
     name: metrics
     targetPort: metrics
   selector:
-    app: {{ .Values.name }}
+    {{- include "labels.selector" . | nindent 4 }}
