--- a/helm/node-exporter-app/values.yaml
+++ b/helm/node-exporter-app/values.yaml
@@ -1,6 +1,9 @@
 # Default values for node-exporter-chart.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
+project:
+  branch: "[[ .Branch ]]"
+  commit: "[[ .SHA ]]"
 
 name: node-exporter
 namespace: kube-system
