--- a/helm/node-exporter-app/templates/daemonset.yaml
+++ b/helm/node-exporter-app/templates/daemonset.yaml
@@ -1,8 +1,8 @@
 apiVersion: apps/v1
 kind: DaemonSet
 metadata:
-  name: {{ include "resource.default.name" }}
-  namespace: {{ include "resource.default.namespace" }}
+  name: {{ include "resource.default.name" . }}
+  namespace: {{ include "resource.default.namespace" . }}
   labels:
     {{- include "labels.common" . | nindent 4 }}
     giantswarm.io/service-type: "managed"
@@ -14,7 +14,7 @@ spec:
       {{- include "labels.selector" . | nindent 6 }}
   template:
     metadata:
-      name: {{ include "resource.default.name" }}
+      name: {{ include "resource.default.name" . }}
       labels:
         {{- include "labels.common" . | nindent 8 }}
         giantswarm.io/service-type: "managed"
@@ -28,7 +28,7 @@ spec:
       priorityClassName: system-node-critical
       containers:
       - image: "{{ .Values.image.registry }}/{{ .Values.image.name }}:{{ .Values.image.tag }}"
-        name: {{ include "resource.default.name" }}
+        name: {{ include "resource.default.name" . }}
         ports:
         - name: metrics
           containerPort: {{ .Values.port }}
@@ -106,6 +106,6 @@ spec:
       - name: systemd
         hostPath:
           path: /run/systemd
-      serviceAccountName: {{ include "resource.default.name" }}
+      serviceAccountName: {{ include "resource.default.name" . }}
       hostNetwork: true
       hostPID: true
