--- a/helm/node-exporter-app/templates/psp.yaml
+++ b/helm/node-exporter-app/templates/psp.yaml
@@ -1,7 +1,7 @@
 apiVersion: policy/v1beta1
 kind: PodSecurityPolicy
 metadata:
-  name: {{ include "resource.psp.name" }}
+  name: {{ include "resource.psp.name" . }}
   labels:
     {{- include "labels.common" . | nindent 4 }}
     giantswarm.io/service-type: "managed"
