--- a/helm/node-exporter-app/templates/rbac.yaml
+++ b/helm/node-exporter-app/templates/rbac.yaml
@@ -1,24 +1,24 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: {{ include "resource.default.name" }}
-  namespace: {{ include "resource.default.namespace" }}
+  name: {{ include "resource.default.name" . }}
+  namespace: {{ include "resource.default.namespace" . }}
   labels:
     {{- include "labels.common" . | nindent 4 }}
     giantswarm.io/service-type: "managed"
 subjects:
 - kind: ServiceAccount
-  name: {{ include "resource.default.name" }}
-  namespace: {{ include "resource.default.namespace" }}
+  name: {{ include "resource.default.name" . }}
+  namespace: {{ include "resource.default.namespace" . }}
 roleRef:
   kind: Role
-  name: {{ include "resource.default.name" }}
+  name: {{ include "resource.default.name" . }}
   apiGroup: rbac.authorization.k8s.io
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  name: {{ include "resource.default.name" }}
+  name: {{ include "resource.default.name" . }}
   namespace: kube-system
   labels:
     {{- include "labels.common" . | nindent 4 }}
@@ -29,6 +29,6 @@ rules:
   resources:
   - podsecuritypolicies
   resourceNames:
-  - {{ include "resource.psp.name" }}
+  - {{ include "resource.psp.name" . }}
   verbs:
   - "use"
