--- a/helm/node-exporter-app/templates/service.yaml
+++ b/helm/node-exporter-app/templates/service.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "resource.default.name" }}
-  namespace: {{ include "resource.default.namespace" }}
+  name: {{ include "resource.default.name" . }}
+  namespace: {{ include "resource.default.namespace" . }}
   labels:
     {{- include "labels.common" . | nindent 4 }}
     giantswarm.io/service-type: "managed"
