--- a/helm/node-exporter-app/templates/service.yaml
+++ b/helm/node-exporter-app/templates/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "resource.default.name" . }}
+  name: {{ include "name" . }}
   namespace: {{ include "resource.default.namespace" . }}
   labels:
     {{- include "labels.common" . | nindent 4 }}
