Disable new collectors

--- a/helm/node-exporter-app/templates/daemonset.yaml
+++ b/helm/node-exporter-app/templates/daemonset.yaml
@@ -71,7 +71,9 @@ spec:
         - '--no-collector.ipvs'
         - '--no-collector.powersupplyclass'
         - '--no-collector.schedstat'
+        - '--no-collector.softnet'
         - '--no-collector.textfile'
+        - '--no-collector.thermal_zone'
         - '--no-collector.udp_queues'
         - '--no-collector.wifi'
         - '--no-collector.zfs'
