--- a/helm/node-exporter-app/templates/daemonset.yaml
+++ b/helm/node-exporter-app/templates/daemonset.yaml
@@ -47,6 +47,9 @@ spec:
         - '--collector.bcache'
         - '--collector.conntrack'
         - '--collector.cpu'
+        {{- if eq (include "provider" .) "azure" }}
+        - '--collector.diskstats'
+        {{- end }}
         - '--collector.edac'
         - '--collector.entropy'
         - '--collector.filefd'
@@ -67,9 +70,7 @@ spec:
         - '--collector.xfs'
 
         - '--no-collector.btrfs'
-        {{- if eq (include "provider" .) "azure" }}
-        - '--collector.diskstats'
-        {{- else }}
+        {{- if ne (include "provider" .) "azure" }}
         - '--no-collector.diskstats'
         {{- end }}
         - '--no-collector.infiniband'
