--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2.1
 orbs:
-  architect: giantswarm/architect@0.10.0
+  architect: giantswarm/architect@0.17.0
 
 workflows:
   version: 2
@@ -20,8 +20,8 @@ workflows:
       - architect/integration-test:
           context: architect
           name: basic-integration-test
+          install-app-platform: true
           test-dir: "integration/test/basic"
-          env-file: "integration/config/.env"
           filters:
             # Do not trigger the job on merge to master.
             branches:
