--- a/helm/node-exporter-app/templates/daemonset.yaml
+++ b/helm/node-exporter-app/templates/daemonset.yaml
@@ -33,8 +33,12 @@ spec:
       priorityClassName: system-node-critical
       {{- end }}
       containers:
-      - image: "{{ .Values.image.registry }}/{{ .Values.image.name }}:{{ .Values.image.tag }}"
-        name: {{ include "resource.default.name" . }}
+      - name: {{ include "resource.default.name" . }}
+        {{- if .Values.Installation }}
+        image: "{{ .Values.Installation.V1.Registry.Domain }}/{{ .Values.image.name }}:{{ .Values.image.tag }}"
+        {{- else }}
+        image: "{{ .Values.image.registry }}/{{ .Values.image.name }}:{{ .Values.image.tag }}"
+        {{- end }}
         ports:
         - name: metrics
           containerPort: {{ .Values.port }}
