--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2.1
 orbs:
-  architect: giantswarm/architect@2.2.0
+  architect: giantswarm/architect@2.4.1
 
 workflows:
   version: 2
@@ -49,6 +49,20 @@ workflows:
           app_catalog_test: "control-plane-test-catalog"
           chart: "node-exporter-app"
           filters:
+            tags:
+              only: /^v.*/
+
+      - architect/push-to-app-collection:
+          context: architect
+          name: push-node-exporter-to-shared-app-collection
+          app_name: "node-exporter-app"
+          app_namespace: "monitoring"
+          app_collection_repo: "shared-app-collection"
+          requires:
+            - push-node-exporter-to-control-plane-app-catalog
+          filters:
+            branches:
+              ignore: /.*/
             tags:
               only: /^v.*/
 
