--- a/helm/node-exporter-app/Chart.yaml
+++ b/helm/node-exporter-app/Chart.yaml
@@ -4,3 +4,5 @@ description: A Helm chart for Kubernetes Node-Exporter Service
 home: https://github.com/giantswarm/node-exporter-app
 name: node-exporter-app
 version: [[ .Version ]]
+annotations:
+  config.giantswarm.io/version: 1.x.x
