--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -107,7 +107,21 @@ workflows:
               ignore: /.*/
             tags:
               only: /^v.*/
-              
+
+      - architect/push-to-app-collection:
+          context: architect
+          name: push-node-exporter-to-openstack-app-collection
+          app_name: "node-exporter-app"
+          app_namespace: "monitoring"
+          app_collection_repo: "openstack-app-collection"
+          requires:
+            - push-node-exporter-to-control-plane-app-catalog
+          filters:
+            branches:
+              ignore: /.*/
+            tags:
+              only: /^v.*/
+
       - architect/push-to-app-collection:
           context: architect
           name: push-node-exporter-to-vmware-app-collection
