--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -124,10 +124,10 @@ workflows:
 
       - architect/push-to-app-collection:
           context: architect
-          name: push-node-exporter-to-vmware-app-collection
+          name: push-node-exporter-to-vsphere-app-collection
           app_name: "node-exporter-app"
           app_namespace: "monitoring"
-          app_collection_repo: "vmware-app-collection"
+          app_collection_repo: "vsphere-app-collection"
           requires:
             - push-node-exporter-to-control-plane-app-catalog
           filters:
