Disable boot partition from the `filesystem` exporter.

--- a/helm/node-exporter-app/templates/daemonset.yaml
+++ b/helm/node-exporter-app/templates/daemonset.yaml
@@ -91,7 +91,9 @@ spec:
         {{- end }}
         {{- if .Values.disableNvmeCollector }}
         - '--no-collector.nvme'
-        {{- end }}                
+        {{- end }}
+
+        - '--collector.filesystem.mount-points-exclude=boot'
         livenessProbe:
           httpGet:
             path: /
