Add ethtool collector

--- a/helm/node-exporter-app/values.yaml
+++ b/helm/node-exporter-app/values.yaml
@@ -180,6 +180,7 @@ extraArgs:
   - '--collector.diskstats'
   - '--collector.edac'
   - '--collector.entropy'
+  - '--collector.ethtool'
   - '--collector.filefd'
   - '--collector.filesystem'
   - '--collector.hwmon'
