--- a/helm/node-exporter-app/templates/endpoints.yaml
+++ b/helm/node-exporter-app/templates/endpoints.yaml
@@ -13,6 +13,6 @@ subsets:
       {{- end }}
     ports:
       - name: {{ .Values.service.portName }}
-        port: 9100
+        port: {{ .Values.service.port }}
         protocol: TCP
 {{- end }}
