--- a/helm/node-exporter-app/Chart.yaml
+++ b/helm/node-exporter-app/Chart.yaml
@@ -1,23 +1,8 @@
-apiVersion: v2
-name: node-exporter-app
-description: A Helm chart for prometheus node-exporter
-keywords:
-  - node-exporter
-  - prometheus
-  - exporter
-type: application
-version: [[ .Version ]]
-appVersion: 1.3.1
+apiVersion: v1
+appVersion: "v1.3.1"
+description: A Helm chart for Kubernetes Node-Exporter Service
 home: https://github.com/giantswarm/node-exporter-app
-icon: https://s.giantswarm.io/app-icons/prometheus-operator/1/dark.svg
-sources:
-  - https://github.com/prometheus/node_exporter/
-maintainers:
-  - email: gianrubio@gmail.com
-    name: gianrubio
-  - name: bismarck
-  - email: zanhsieh@gmail.com
-    name: zanhsieh
+name: node-exporter-app
+version: [[ .Version ]]
 annotations:
-  application.giantswarm.io/team: phoenix
   config.giantswarm.io/version: 1.x.x
