--- a/helm/node-exporter-app/templates/psp.yaml
+++ b/helm/node-exporter-app/templates/psp.yaml
@@ -1,50 +1,34 @@
-{{- if .Values.rbac.create }}
-{{- if .Values.rbac.pspEnabled }}
 apiVersion: policy/v1beta1
 kind: PodSecurityPolicy
 metadata:
-  name: {{ template "prometheus-node-exporter.fullname" . }}
-  namespace: {{ template "prometheus-node-exporter.namespace" . }}
-  labels: {{ include "prometheus-node-exporter.labels" . | indent 4 }}
-{{- if .Values.rbac.pspAnnotations }}
-  annotations:
-{{ toYaml .Values.rbac.pspAnnotations | indent 4 }}
-{{- end}}
+  name: {{ include "resource.psp.name" . }}
+  labels:
+    {{- include "labels.common" . | nindent 4 }}
+    giantswarm.io/service-type: "managed"
 spec:
   privileged: false
-  # Allow core volume types.
-  volumes:
-    - 'configMap'
-    - 'emptyDir'
-    - 'projected'
-    - 'secret'
-    - 'downwardAPI'
-    - 'persistentVolumeClaim'
-    - 'hostPath'
-  hostNetwork: true
-  hostIPC: false
-  hostPID: true
-  hostPorts:
-    - min: 0
-      max: 65535
+  allowPrivilegeEscalation: false
   runAsUser:
-    # Permits the container to run with root privileges as well.
-    rule: 'RunAsAny'
+    rule: RunAsAny
   seLinux:
-    # This policy assumes the nodes are using AppArmor rather than SELinux.
-    rule: 'RunAsAny'
+    rule: RunAsAny
   supplementalGroups:
     rule: 'MustRunAs'
     ranges:
-      # Allow adding the root group.
-      - min: 0
+      - min: 1
         max: 65535
   fsGroup:
     rule: 'MustRunAs'
     ranges:
-      # Allow adding the root group.
-      - min: 0
+      - min: 1
         max: 65535
-  readOnlyRootFilesystem: false
-{{- end }}
-{{- end }}
+  volumes:
+  - 'secret'
+  - 'configMap'
+  - 'hostPath'
+  hostPID: true
+  hostIPC: true
+  hostNetwork: true
+  hostPorts:
+  - min: 1
+    max: 65536
