--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,3 +51,59 @@ workflows:
           filters:
             tags:
               only: /^v.*/
+
+      - architect/push-to-app-collection:
+          context: architect
+          name: push-node-exporter-to-shared-app-collection
+          app_name: "node-exporter-app"
+          app_namespace: "monitoring"
+          app_collection_repo: "shared-app-collection"
+          requires:
+            - push-node-exporter-to-control-plane-app-catalog
+          filters:
+            branches:
+              ignore: /.*/
+            tags:
+              only: /^v.*/
+
+      - architect/push-to-app-collection:
+          context: architect
+          name: push-node-exporter-to-aws-app-collection
+          app_name: "node-exporter-app"
+          app_namespace: "monitoring"
+          app_collection_repo: "aws-app-collection"
+          requires:
+            - push-node-exporter-to-control-plane-app-catalog
+          filters:
+            branches:
+              ignore: /.*/
+            tags:
+              only: /^v.*/
+
+      - architect/push-to-app-collection:
+          context: architect
+          name: push-node-exporter-to-azure-app-collection
+          app_name: "node-exporter-app"
+          app_namespace: "monitoring"
+          app_collection_repo: "azure-app-collection"
+          requires:
+            - push-node-exporter-to-control-plane-app-catalog
+          filters:
+            branches:
+              ignore: /.*/
+            tags:
+              only: /^v.*/
+
+      - architect/push-to-app-collection:
+          context: architect
+          name: push-node-exporter-to-vsphere-app-collection
+          app_name: "node-exporter-app"
+          app_namespace: "monitoring"
+          app_collection_repo: "vsphere-app-collection"
+          requires:
+            - push-node-exporter-to-control-plane-app-catalog
+          filters:
+            branches:
+              ignore: /.*/
+            tags:
+              only: /^v.*/
