use default_branch from context

--- a/.github/workflows/zz_generated.changelog_link.yaml
+++ b/.github/workflows/zz_generated.changelog_link.yaml
@@ -35,7 +35,7 @@ jobs:
           ## ME
 
           # Get changed line in CHANGELOG
-          lines=$(git diff --no-prefix -U0 $(git merge-base HEAD origin/HEAD)..HEAD -- CHANGELOG.md|tail +6|awk -F'^[+]' '{print $2}')
+          lines=$(git diff --no-prefix -U0 $(git merge-base HEAD origin/${{ github.event.repository.default_branch }})..HEAD -- CHANGELOG.md|tail +6|awk -F'^[+]' '{print $2}')
 
           # Skip when no changes are detected
           # Skip when more than 1 line are changed #Remove maybe?
