--- a/.github/workflows/zz_generated.changelog_link.yaml
+++ b/.github/workflows/zz_generated.changelog_link.yaml
@@ -45,8 +45,8 @@ jobs:
 
           # Skip when no changes are detected
           # Skip when more than 1 line are changed #Remove maybe?
-          echo "$lines"|wc -l
-          if [[ $(echo "$lines" | wc -l) -ne 1 ]]; then
+          echo -n "$lines"|wc -l
+          if [[ $(echo -n "$lines" | wc -l) -ne 1 ]]; then
             echo "> skipping changelog link update; no or too many detected lines"
             exit 0
           fi
