--- a/.github/workflows/zz_generated.changelog_link.yaml
+++ b/.github/workflows/zz_generated.changelog_link.yaml
@@ -43,6 +43,8 @@ jobs:
           # Get changed line in CHANGELOG
           lines=$(git diff --no-prefix -U0 $(git merge-base HEAD origin/${{ github.event.repository.default_branch }})..HEAD -- CHANGELOG.md|tail +6|awk -F'^[+]' '{print $2}')
 
+          #TODO: compute target line to be changed from git diff patch line number
+
           # Skip when no changes are detected
           # Skip when more than 1 line are changed #Remove maybe?
           echo -n "$lines"|wc -l
