--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,10 +23,10 @@ workflows:
           install-app-platform: true
           test-dir: "integration/test/basic"
           filters:
-            # Do not trigger the job on merge to master.
+            # Do not trigger the job on merge to main.
             branches:
               ignore:
-                - master
+                - main
           requires:
             - push-to-default-app-catalog
 
@@ -35,10 +35,10 @@ workflows:
           install-app-platform: true
           test-dir: "integration/test/upgrade"
           filters:
-            # Do not trigger the job on merge to master.
+            # Do not trigger the job on merge to main.
             branches:
               ignore:
-                - master
+                - main
           requires:
             - push-to-default-app-catalog
 
