--- a/helm/node-exporter-app/templates/psp.yaml
+++ b/helm/node-exporter-app/templates/psp.yaml
@@ -1,4 +1,4 @@
-{{- if le (int .Capabilities.KubeVersion.Minor) 24 }}
+{{- if .Capabilities.APIVersions.Has "policy/v1beta1/PodSecurityPolicy" }}
 {{- if .Values.rbac.create }}
 {{- if .Values.rbac.pspEnabled }}
 apiVersion: policy/v1beta1
