--- a/helm/node-exporter-app/values.yaml
+++ b/helm/node-exporter-app/values.yaml
@@ -17,9 +17,6 @@ service:
   nodePort:
   portName: metrics
   listenOnAllInterfaces: true
-  annotations:
-    prometheus.io/scrape: "true"
-    giantswarm.io/monitoring: "true"
 
 # Additional environment variables that will be passed to the daemonset
 env: {}
@@ -28,7 +25,7 @@ env: {}
 
 prometheus:
   monitor:
-    enabled: false
+    enabled: true
     additionalLabels: {}
     namespace: ""
 
@@ -143,10 +140,6 @@ podAnnotations:
   cluster-autoscaler.kubernetes.io/safe-to-evict: "true"
   # Fix for collector systemd
   container.apparmor.security.beta.kubernetes.io/node-exporter: "unconfined"
-  # Fix duplicate scrapping by Prometheus
-  # see: https://github.com/giantswarm/node-exporter-app/pull/171
-  prometheus.io/scrape: "true"
-  giantswarm.io/monitoring: "true"
 
 # Extra labels to be added to node exporter pods
 podLabels: {}
