using already existing field for sm's namespace

--- a/helm/node-exporter-app/values.yaml
+++ b/helm/node-exporter-app/values.yaml
@@ -23,14 +23,11 @@ env: {}
 ##  env:
 ##    VARIABLE: value
 
-serviceMonitor:
-  namespace: giantswarm
-
 prometheus:
   monitor:
     enabled: true
     additionalLabels: {}
-    namespace: ""
+    namespace: "giantswarm"
 
     jobLabel: ""
 
