--- a/helm/node-exporter-app/values.yaml
+++ b/helm/node-exporter-app/values.yaml
@@ -53,27 +53,27 @@ prometheus:
       - namespace
       - __meta_kubernetes_namespace
       targetLabel: namespace
-    - action: add
+    - action: replace
       sourceLabels:
       - __meta_kubernetes_pod_label_app_kubernetes_io_name
       targetLabel: app
-    - action: add
+    - action: replace
       sourceLabels:
       - __meta_kubernetes_pod_label_app_kubernetes_io_instance
       targetLabel: instance
-    - action: add
+    - action: replace
       sourceLabels:
       - __meta_kubernetes_pod_name
       targetLabel: pod
-    - action: add
+    - action: replace
       sourceLabels:
       - __meta_kubernetes_pod_container_name
       targetLabel: container
-    - action: add
+    - action: replace
       sourceLabels:
       - __meta_kubernetes_pod_node_name
       targetLabel: node
-    - action: add
+    - action: replace
       sourceLabels:
       - __meta_kubernetes_node_label_role
       targetLabel: role
