--- a/helm/node-exporter-app/values.yaml
+++ b/helm/node-exporter-app/values.yaml
@@ -44,7 +44,39 @@ prometheus:
     ##
     selectorOverride: {}
 
-    relabelings: []
+    relabelings:
+    - action: replace
+      separator: ;
+      regex: ";(.*)"
+      replacement: $1
+      sourceLabels:
+      - namespace
+      - __meta_kubernetes_namespace
+      targetLabel: namespace
+    - action: replace
+      sourceLabels:
+      - __meta_kubernetes_pod_label_app_kubernetes_io_name
+      targetLabel: app
+    - action: replace
+      sourceLabels:
+      - __meta_kubernetes_pod_label_app_kubernetes_io_instance
+      targetLabel: instance
+    - action: replace
+      sourceLabels:
+      - __meta_kubernetes_pod_name
+      targetLabel: pod
+    - action: replace
+      sourceLabels:
+      - __meta_kubernetes_pod_container_name
+      targetLabel: container
+    - action: replace
+      sourceLabels:
+      - __meta_kubernetes_pod_node_name
+      targetLabel: node
+    - action: replace
+      sourceLabels:
+      - __meta_kubernetes_node_label_role
+      targetLabel: role
     metricRelabelings: []
     interval: ""
     scrapeTimeout: 10s
