--- a/helm/node-exporter-app/templates/psp.yaml
+++ b/helm/node-exporter-app/templates/psp.yaml
@@ -1,6 +1,4 @@
-{{- if .Capabilities.APIVersions.Has "policy/v1beta1/PodSecurityPolicy" }}
-{{- if .Values.rbac.create }}
-{{- if .Values.rbac.pspEnabled }}
+{{- if not .Values.global.podSecurityStandards.enforced }}
 apiVersion: policy/v1beta1
 kind: PodSecurityPolicy
 metadata:
@@ -47,6 +45,4 @@ spec:
       - min: 0
         max: 65535
   readOnlyRootFilesystem: false
-{{- end }}
-{{- end }}
 {{- end }}
