--- a/helm/node-exporter-app/values.yaml
+++ b/helm/node-exporter-app/values.yaml
@@ -126,12 +126,6 @@ containerSecurityContext: {}
   #   - SYS_TIME
 
 rbac:
-  ## If true, create & use RBAC resources
-  ##
-  create: true
-  ## If true, create & use Pod Security Policy resources
-  ## https://kubernetes.io/docs/concepts/policy/pod-security-policy/
-  pspEnabled: true
   pspAnnotations: {}
 
 # for deployments that have node_exporter deployed outside of the cluster, list
@@ -322,3 +316,7 @@ registry:
 
 disableConntrackCollector: false
 disableNvmeCollector: false
+
+global:
+  podSecurityStandards:
+    enforced: false
