Configure gsoci.azurecr.io as the registry to use by default (#236)
* Update default registry domain in values.yaml

* Update changelog

* Reduces changes to registry name

--- a/helm/node-exporter-app/values.yaml
+++ b/helm/node-exporter-app/values.yaml
@@ -317,7 +317,7 @@ readinessProbe:
   timeoutSeconds: 1
 
 registry:
-  domain: docker.io
+  domain: gsoci.azurecr.io
 
 disableConntrackCollector: false
 disableNvmeCollector: false
