--- a/helm/node-exporter-app/Chart.yaml
+++ b/helm/node-exporter-app/Chart.yaml
@@ -19,5 +19,5 @@ maintainers:
   - email: zanhsieh@gmail.com
     name: zanhsieh
 annotations:
-  application.giantswarm.io/team: phoenix
+  application.giantswarm.io/team: turtles
   config.giantswarm.io/version: 1.x.x
