--- a/helm/node-exporter-app/templates/pss-exceptions.yaml
+++ b/helm/node-exporter-app/templates/pss-exceptions.yaml
@@ -7,6 +7,14 @@ metadata:
   namespace: {{ .Values.kyvernoPolicyExceptions.namespace | default (include "prometheus-node-exporter.namespace" .) }}
 spec:
   exceptions:
+  - policyName: disallow-host-namespaces
+    ruleNames:
+    - host-namespaces
+    - autogen-host-namespaces
+  - policyName: disallow-host-ports
+    ruleNames:
+    - host-ports-none
+    - autogen-host-ports-none
   - policyName: disallow-capabilities-strict 
     ruleNames:
     - require-drop-all 
