--- a/helm/node-exporter-app/templates/pss-exceptions.yaml
+++ b/helm/node-exporter-app/templates/pss-exceptions.yaml
@@ -1,6 +1,6 @@
 {{- if .Values.kyvernoPolicyExceptions.enabled }}
-{{- if .Capabilities.APIVersions.Has "kyverno.io/v2alpha1/PolicyException" }}
-apiVersion: kyverno.io/v2alpha1
+{{- if .Capabilities.APIVersions.Has "kyverno.io/v2beta1/PolicyException" }}
+apiVersion: kyverno.io/v2beta1
 kind: PolicyException
 metadata:
   name: {{ template "prometheus-node-exporter.fullname" . }}-exceptions
