--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,7 @@ workflows:
     jobs:
       - architect/push-to-app-catalog:
           context: architect
+          executor: app-build-suite
           name: push-to-default-app-catalog
           app_catalog: default-catalog
           app_catalog_test: default-test-catalog
@@ -24,6 +25,7 @@ workflows:
 
       - architect/push-to-app-catalog:
           context: architect
+          executor: app-build-suite
           name: push-node-exporter-to-control-plane-app-catalog
           app_catalog: control-plane-catalog
           app_catalog_test: control-plane-test-catalog
