--- a/helm/node-exporter-app/Chart.yaml
+++ b/helm/node-exporter-app/Chart.yaml
@@ -6,7 +6,7 @@ keywords:
   - prometheus
   - exporter
 type: application
-version: [[ .Version ]]
+version: 1.20.11-dev
 appVersion: 1.8.2
 home: https://github.com/giantswarm/node-exporter-app
 icon: https://s.giantswarm.io/app-icons/prometheus/1/light.svg
@@ -21,6 +21,7 @@ maintainers:
     name: zeritti
 annotations:
   application.giantswarm.io/team: turtles
+  io.giantswarm.application.team: turtles
   config.giantswarm.io/version: 1.x.x
   "artifacthub.io/license": Apache-2.0
   "artifacthub.io/links": |
